# demo_trading-bot

./: .env  .gitignore  Cargo.toml  README.md
src/: api.rs  endpoint.rs  main.rs  model.rs  utils.rs
